--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "axios": "^1.7.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "express": "^4.19.2",
+    "fa": "^1.0.1",
+    "fullcalendar": "^6.1.15",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "nodemon": "^3.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-calendar": "^5.0.0",
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
